updated music page front end. New larger music player scales better. Still an issue with the height on small screens but not too bad.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -86,6 +86,7 @@ p {
   /*letter-spacing: -1px;*/
   padding-top: 9px;
   font-weight: bold;
+  padding-left: 10px;
 }
 
 #logo:hover {
